--- a/templates/renumeracion_tool.html
+++ b/templates/renumeracion_tool.html
@@ -93,7 +93,7 @@
                         <input type="file" name="file_excel" id="file_excel" class="hidden" accept=".xlsx,.xls"
                             required>
                         <label for="file_excel"
-                            class="flex flex-col items-center justify-center w-full h-32 border border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
+                            class="flex flex-col items-center justify-center w-full h-32 border-2 border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
                             <span id="name_excel"
                                 class="text-[10px] font-bold text-gray-400 text-center px-4 uppercase tracking-widest group-hover:text-gray-900 transition-colors">
                                 Seleccione el archivo .xlsx
@@ -171,7 +171,7 @@
             </div>
 
             <button type="submit"
-                class="w-full bg-gray-100 text-gray-900 py-5 rounded-2xl hover:bg-white hover:border-gray-200 border border-transparent transition-all font-bold text-[11px] tracking-[0.3em] flex justify-center items-center gap-4 uppercase active:scale-[0.98]">
+                class="w-full bg-gray-900 text-white py-5 rounded-2xl hover:bg-white hover:text-gray-900 border border-gray-900 transition-all font-bold text-[11px] tracking-[0.3em] flex justify-center items-center gap-4 uppercase active:scale-[0.98]">
                 <span class="material-symbols-outlined font-light">bolt</span> Procesar Cambios y Guardar
             </button>
         </form>
