--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -44,7 +44,7 @@
             </div>
 
             <button type="submit"
-                class="w-full py-5 bg-gray-50 text-gray-900 border border-gray-100 rounded-2xl font-bold text-xs tracking-[0.3em] hover:bg-gray-800 transition-all active:scale-[0.98] flex items-center justify-center gap-3">
+                class="w-full py-5 bg-gray-900 text-white border border-gray-900 rounded-2xl font-bold text-xs tracking-[0.3em] hover:bg-white hover:text-gray-900 transition-all active:scale-[0.98] flex items-center justify-center gap-3">
                 AUTENTICAR SESIÓN
                 <span class="material-symbols-outlined text-[20px] font-light">login</span>
             </button>
