--- a/templates/avaluo_tool.html
+++ b/templates/avaluo_tool.html
@@ -42,7 +42,7 @@
                     <input type="file" name="file_pre" id="file_pre" class="hidden" accept=".xlsx,.xls,.csv,.txt" {% if
                         not session_data.name_pre %}required{% endif %}>
                     <label for="file_pre"
-                        class="flex flex-col items-center justify-center w-full h-40 border border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
+                        class="flex flex-col items-center justify-center w-full h-40 border-2 border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
                         <span
                             class="material-symbols-outlined text-3xl text-gray-300 mb-3 group-hover:text-gray-900 transition-colors font-light">terminal</span>
                         <span
@@ -60,7 +60,7 @@
                     <input type="file" name="file_post" id="file_post" class="hidden" accept=".xlsx,.xls,.csv,.txt" {%
                         if not session_data.name_post %}required{% endif %}>
                     <label for="file_post"
-                        class="flex flex-col items-center justify-center w-full h-40 border border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
+                        class="flex flex-col items-center justify-center w-full h-40 border-2 border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
                         <span
                             class="material-symbols-outlined text-3xl text-gray-300 mb-3 group-hover:text-gray-900 transition-colors font-light">terminal</span>
                         <span
@@ -127,7 +127,7 @@
             </div>
 
             <button type="submit"
-                class="w-full bg-gray-50 border border-gray-200 text-gray-900 py-5 rounded-2xl hover:bg-white hover:border-gray-200 transition-all font-bold text-[11px] tracking-[0.3em] flex justify-center items-center gap-4 uppercase active:scale-[0.98]">
+                class="w-full bg-gray-900 border border-gray-900 text-white py-5 rounded-2xl hover:bg-white hover:text-gray-900 transition-all font-bold text-[11px] tracking-[0.3em] flex justify-center items-center gap-4 uppercase active:scale-[0.98]">
                 <span class="material-symbols-outlined font-light">analytics</span> Ejecutar Análisis de Avalúos
             </button>
         </form>
