--- a/templates/informales_tool.html
+++ b/templates/informales_tool.html
@@ -43,11 +43,14 @@
                     <label class="block text-[10px] font-mono font-bold text-gray-400 uppercase tracking-widest pl-2">
                         02. Capa de Predios Formales (.zip con GDB)</label>
                     <input type="file" name="file_formal" id="file_formal" class="hidden" accept=".zip" required>
-                    <label for="file_formal"
-                        class="flex flex-col items-center justify-center w-full h-44 border-2 border-dashed border-gray-200 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-200 transition-all cursor-pointer group">
-                        <span id="name_for"
-                            class="text-[10px] font-bold text-gray-400 text-center px-4 uppercase tracking-widest group-hover:text-gray-900 transition-colors">
-                            Suba el archivo .zip de formales (CTM12)
+                    <label for="file_formal" id="drop-zone-formal"
+                        class="flex flex-col items-center justify-center w-full h-44 border-2 border-dashed border-gray-100 rounded-2xl bg-gray-50/30 hover:bg-white hover:border-gray-900 transition-all cursor-pointer group">
+                        <span
+                            class="material-symbols-outlined text-4xl text-gray-300 mb-3 group-hover:text-gray-900 transition-colors font-light">map</span>
+                        <span
+                            class="text-[10px] font-mono font-bold text-gray-400 text-center px-6 leading-relaxed uppercase"
+                            id="name_for">
+                            Cargar_Geometría_Formal (.zip)
                         </span>
                     </label>
                 </div>
